feat(quiz-service): enhance quiz mapping and grading logic, improve question handling